# PCS

./: esercitazione_0.txt
esercitazione2/: CMakeLists.txt  es1.cpp  es2.cpp
esercitazione4/: CMakeLists.txt  bubble_sort.h  insertion_sort.h  is_sorted.h  selection_sort.h  test_bubble  test_bubble.cpp  test_insertion  test_insertion.cpp  test_selection  test_selection.cpp  time_sorts  time_sorts.cpp
esercitazione_1/: CMakeLists.txt  es2.cpp
